<resources>
    <!-- 현지 파트 -->
    <!-- 로그인 -->
    <string name="app_name">Rutina</string>
    <string name="login">로그인</string>
    <string name="login_ment">나만의\n피부 루틴을 \n찾기 위한 기록</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="check_password">비밀번호 재확인</string>
    <string name="id">아이디</string>
    <string name="dot">·</string>
    <string name="findPwd">비밀번호찾기</string>
    <string name="signin">회원가입</string>
    <string name="Loginbutton">LOG IN</string>
    <string name="StringValue">이미지가 열리지 않습니다.</string>
    <string name="dressing_table">나의 화장대</string>
    <string name="rutin">루틴</string>
    <string name="dressing_title">화장대를 기록해주세요:)</string>
    <string name="dry">건성</string>
    <string name="oily">지성</string>
    <string name="complexity">복합성</string>
    <string name="dontknow">모름</string>
    <string name="ex_email">abc@email.com</string>
    <string name="user_name">이름</string>
    <string name="birth_title">생년월일</string>
    <string name="year">년(4자)</string>
    <string name="year_text">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="gender">성별</string>
    <string name="man">남</string>
    <string name="woman">여</string>
    <string name="pwd_hint_select">비밀번호 힌트 선택</string>
    <string name="pwd_hint">비밀번호 힌트</string>
    <string name="prompt_question">선택</string>

    <!-- 회원가입 -->
    <string name="join_select">피부 고민을 선택해주세요</string>
    <string name="join_select_explain">피부타입을 통해\n사용자의 피부 데이터를 분석합니다</string>
    <string name="next">다음</string>
    <string name="nick_name">닉네임</string>
    <string name="save">저장</string>

    <!-- 화장대 -->
    <string name="skin">스킨</string>
    <string name="lotion">로션</string>
    <string name="cream">크림</string>
    <string name="add_rutine">루틴을 등록해 주세요:)</string>
    <string name="add_skin">스킨을 화장대에 등록해 주세요:)</string>
    <string name="add_lotion">로션을 화장대에 등록해 주세요:)</string>
    <string name="add_cream">로션을 화장대에 등록해 주세요:)</string>

    <!-- 영주 파트 -->
    <string name="some_id">오늘 사용하신 화장품을 기록해주세요 :)</string>
    <string name="bodyText">당신의 몸 상태를 저에게 알려주세요 :)</string>
    <string name="newCosmetic">새로운 화장품 등록하기</string>
    <string name="menses">생리</string>
    <string name="drink">오늘이나, 어제 음주를 하신 적이 있나요?</string>
    <string name="makeup">오늘 피부 화장을 하셨나요?</string>
    <string name="sleep">오늘의 수면을 기록해주세요 :)</string>
    <string name="sleep_rocommand">성인기준 수면 권장시간은 6 - 9시간이에요!</string>
    <string name="skin_state">피부 상태를 기록해주세요 :)</string>
    <string name="yes">Y</string>
    <string name="no">N</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>