<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                android:text="@string/login"
                android:clickable="true"
                android:focusable="true"
                android:textColor="#000000"
                android:textSize="18sp"
                app:drawableStartCompat="?attr/actionModeCloseDrawable"/>
            </LinearLayout>

            <TextView
                android:id="@+id/explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/login_ment"
                android:textColor="#000000"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/EmailAddress"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="0dp"
                android:padding="10dp"
                android:background="@drawable/box_id"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="textEmailAddress"/>

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:padding="10dp"
                android:background="@drawable/box_id"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="textPassword"/>

            <Button
                android:id="@+id/Loginbutton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:backgroundTint="#2EE788"
                android:text="@string/Loginbutton"
                app:cornerRadius="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lockImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                app:srcCompat="@android:drawable/ic_secure"
                android:contentDescription="@string/StringValue"/>

            <TextView
                android:id="@+id/findID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:orientation="vertical"
                android:text="@string/id" />

            <TextView
                android:id="@+id/TextDot"
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:text="@string/dot" />

            <TextView
                android:id="@+id/findPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findPwd" />


            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/signin" />

        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>