<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Join_Select1">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginBottom="20dp"
      android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/imageView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          app:srcCompat="?attr/actionModeCloseDrawable" />

      <TextView
          android:id="@+id/login_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:text="@string/signin"
          android:textColor="#000000"
          android:textSize="18sp" />

      </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

      <Button
          android:layout_width="170dp"
          android:layout_height="240dp"
          android:layout_gravity="center"
          android:layout_marginEnd="30dp"
          android:backgroundTint="#FFFFFF"
          android:text="@string/dry"
          android:textColor="@color/black" />

      <Button
          android:layout_width="170dp"
          android:layout_height="239dp"
          android:backgroundTint="#FFFFFF"
          android:text="@string/complexity"
          android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

      <Button
          android:layout_width="170dp"
          android:layout_height="239dp"
          android:layout_marginEnd="30dp"
          android:backgroundTint="#FFFFFF"
          android:text="@string/oily"
          android:textColor="@color/black" />

      <Button
          android:layout_width="170dp"
          android:layout_height="239dp"
          android:backgroundTint="#FFFFFF"
          android:text="@string/dontknow"
          android:textColor="@color/black" />
    </LinearLayout>
  </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>