<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Join">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="?attr/actionModeCloseDrawable" />
            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/signin"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Join_Email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/email"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/Join_Email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:padding="10dp"
                    android:background="@drawable/rounded_corner_rectangle"
                    android:ems="10"
                    android:hint="@string/ex_email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/Password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/password"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="0dp"
                    android:padding="10dp"
                    android:background="@drawable/rounded_corner_rectangle"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/Check_Password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/check_password"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/EmailAddress"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:padding="10dp"
                    android:background="@drawable/box_id"
                    android:ems="10"/>

                <TextView
                    android:id="@+id/Name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:text="@string/user_name"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:padding="10dp"
                    android:background="@drawable/box_id"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/Birth_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/birth_title"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Year"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="48dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/box_id"
                        android:ems="10"
                        android:hint="@string/year"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/Year_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/year"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/Month"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="48dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:background="@drawable/box_id"
                        android:ems="10"
                        android:hint="@string/month"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/Month_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/month"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/Day"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="48dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:padding="10dp"
                        android:background="@drawable/box_id"
                        android:ems="10"
                        android:hint="@string/day" />

                    <TextView
                        android:id="@+id/Day_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/day"
                        android:textColor="#000000"
                        android:textSize="18sp" />

            </LinearLayout>
                <TextView
                    android:id="@+id/Gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/gender"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/Gender_M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/man"
                    android:textColor="#000000"
                    android:textSize="18sp" />
                <CheckBox
                    android:id="@+id/Gender_W"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/woman"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>
                <TextView
                    android:id="@+id/Password_hint_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/pwd_hint"
                    android:textColor="#000000"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/Password_hint"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:padding="10dp"
                    android:background="@drawable/box_id"
                    android:ems="10"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>