<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".powder.Powder_Room">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                android:text="@string/dressing_table"
                android:textColor="#000000"
                android:textSize="18sp"
                app:drawableStartCompat="?attr/actionModeCloseDrawable" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="#000000"/>

            <TextView
                android:id="@+id/Dressing_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/dressing_title"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Rutin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/rutin"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:background="@drawable/rectangle_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/add_rutin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:srcCompat="@android:drawable/ic_input_add" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/skin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/skin"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:background="@drawable/rectangle_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <ImageView
                        android:id="@+id/add_skin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:srcCompat="@android:drawable/ic_input_add" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/lotion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/lotion"
                    android:textColor="#000000"
                    android:textSize="18sp"/>


                <RelativeLayout
                    android:background="@drawable/rectangle_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/add_lotion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:srcCompat="@android:drawable/ic_input_add" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/cream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/cream"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:background="@drawable/rectangle_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/add_cream"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:srcCompat="@android:drawable/ic_input_add" />
                </RelativeLayout>



            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>